; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_hooks.c_roleChangeCallback.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_hooks.c_roleChangeCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@REDISMODULE_EVENT_REPLROLECHANGED_NOW_MASTER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [12 x i8] c"role-master\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"role-replica\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @roleChangeCallback(i32* %0, i8* %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_2__*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @REDISMODULE_NOT_USED(i8* %11)
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @REDISMODULE_NOT_USED(i8* %13)
  %15 = load i8*, i8** %8, align 8
  %16 = bitcast i8* %15 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %16, %struct.TYPE_2__** %9, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* @REDISMODULE_EVENT_REPLROLECHANGED_NOW_MASTER, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i64
  %21 = select i1 %19, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0)
  store i8* %21, i8** %10, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i8*, i8** %10, align 8
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @LogStringEvent(i32* %22, i8* %23, i32 %26)
  ret void
}

declare dso_local i32 @REDISMODULE_NOT_USED(i8*) #1

declare dso_local i32 @LogStringEvent(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
